--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,19 @@ li{
     list-style: none;
 }
 
+i{
+    padding-right: 5px;
+}
+
+.blue-check{
+    color: blue;
+}
+
 /*----------------
     LAYOUT
 ------------------*/
 .container {
-    max-width: 1000px;
+    max-width: 1020px;
     margin-left: auto;
     margin-right: auto;
     /* padding-left: 20px;
@@ -43,10 +51,9 @@ li{
 }
 
 .large-container{
-    max-width: 1850px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    border: 2px dashed lightcoral;
 }
 
 .row {
@@ -67,6 +74,18 @@ li{
     flex-grow: 1;
 }
 
+.margin-70{
+    margin-top: 70px;
+}
+
+.margin-40{
+    margin-top: 40px;
+}
+
+.margin-30{
+    margin-top: 30px;
+}
+
 /*----------------
     TYPOGRAPHY
 ------------------*/
@@ -75,8 +94,12 @@ body {
 }
 
 .col-left div i{
-    font-size: 80px;
-    padding: 60px 0 25px 25px;
+    font-size: 50px;
+    padding: 60px 0 15px 5px;
+}
+
+.grey{
+    color: gray;
 }
 
 /*----------------
@@ -91,8 +114,19 @@ body {
 }
 
 .btn-large {
-    padding: 20px 20px;
-    font-size: 25px;
+    padding: 10px 10px;
+    font-size: 16px;
+}
+
+.contentbox .btn-large{
+    font-size: 13px;
+    padding: 13px 40px;
+    margin-left: 20px;
+}
+
+
+header .btn-blue{
+    margin-left: -30px;
 }
 
 .btn-blue{
@@ -100,7 +134,7 @@ body {
     color: white;
     font-family: inherit;
     border: none;
-    padding: 12px 18px;
+    padding: 8px 16px;
     cursor: pointer;
 }
 
@@ -110,7 +144,7 @@ body {
 }
 
 .col-left .btn-blue, .col-left > div{
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 /*----------------
@@ -119,19 +153,19 @@ body {
 
 header{
     display: flex;
+    background-color: white;
     justify-content: space-between;
     align-items: center;
-    border: 2px dashed blueviolet;
-    padding: 30px;
     position: sticky;
     top: 0;
     left: 0;
     z-index: 999;
+    padding: 20px;
 }
 
 header li a{
     text-decoration: none;
-    font-size: 25px;
+    font-size: 16px;
     color: black;
 }
 
@@ -141,9 +175,6 @@ header li{
     align-items: center;
 }
 
-header img{
-        width: 200px; /* the height will scale proportionally */
-}
 
 .nav-left{
     display: flex;
@@ -163,19 +194,23 @@ align-items: center;
     MAIN
 ------------------*/
 
+/*----------------
+    SECTION 1
+------------------*/
+
 main section:first-child{
     background-color: #B4D0E6;
 }
 section .large-container h1{
-    font-size: 130px;
+    font-size: 80px;
     padding-top: 100px;
 }
 
 .container-section-1{
     display: flex;
     padding-top: 60px;
-    font-size: 26px;
-    line-height: 35px;
+    font-size:18px;
+    line-height: 25px;
 }
 
 .col-left{
@@ -191,6 +226,132 @@ section .large-container h1{
     width: 100%;
     position: absolute;
 }
+
+/*----------------
+    SECTION 2
+------------------*/
+
+section .container h1{
+    padding-top: 100px;
+    font-size: 40px;
+    padding-bottom: 40px;
+}
+
+
+#hr{
+    padding-top: 200px;
+}
+
+.flex-check{
+    display: flex;
+    gap: 40px;
+    padding-top: 30px;
+    font-size: 15px;
+}
+
+input[type=radio] {
+    width: 15px;
+    height: 15px;
+}
+
+.container-piano-business{
+    display: flex;
+    padding-top: 50px;
+    gap: 50px;
+}
+
+.container-piano-business .header-col{
+    display: flex;
+    gap: 5px;
+    justify-content: flex-start;
+    padding-bottom: 10px;
+    font-size: 16px;
+    align-items: center;
+    flex-direction: column;
+    border: 0.5px solid gray;
+}
+
+.contentbox{
+    width: 100%;
+    padding: 30px 25px 30px 25px;
+    text-align: left;
+}
+
+.border{
+    border-bottom: 0.5px solid gray;  
+    width: 100%;
+    gap: 5px;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+}
+
+.container-lista ul{
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    font-size: 15px;
+}
+
+#short-hr{
+    width: 20%;
+}
+
+.bottom-box{
+    margin-top: 50px;
+    border: 0.5px solid gray;
+}
+
+.bottom-box .contentbox{
+    padding: 30px;
+    padding-bottom: 20px;
+}
+
+.contentbox .p-bottom-content{
+    font-size: 14px;
+}
+
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container-partner{
+    display: flex;
+    margin: 210px 0;
+}
+
+.partner-left{
+    width: 60%;
+}
+
+.partner-left img{
+    width: 100%;
+}
+
+.partner-right{
+    width: 40%;
+    padding: 60px 50px;
+    line-height: 25px;
+}
+
+.partner-right h2{
+    line-height: 35px;
+}
+
+.partner-right p{
+    line-height: 25px;
+}
+
+.partner-right .btn-large{
+    background-color: white;
+    border: 1px solid ;
+}
+
 
 
 /*----------------
